--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@
     justify-content: center;
     display: flex;
 }
+
+a{
+    justify-content: center;
+    display:flex;
+    text-decoration: underline;
+}
